--- a/app/views/refinery/_menu_branch.html.erb
+++ b/app/views/refinery/_menu_branch.html.erb
@@ -4,27 +4,11 @@
   end
 -%>
 <li<%= ['', css].compact.join(' ').gsub(/\ *$/, '').html_safe %>>
-
-  <%# if menu_branch.url.include? '/locations' %>
-    <!--<h2><span  class="location_btn">Destinations</span></h2>-->
-    <!--<%# @menu_locations = Refinery::Locations::Location.order("position ASC").where('parent_id IS null') %>-->
-    <!--<%# if @menu_locations.present? %>-->
-      <!--<ul class="location_nav open">-->
-        <!--<%# @menu_locations.each do |location| %>-->
-          <!--<li>-->
-            <!--<%#= link_to location_link(location) do %>-->
-            <!--<%#= image_fu location.flag_image, '20x20#c', :class=>"img-circle" %>-->
-            <!--<span><%#= location.name %></span>-->
-            <!--<%# end %>-->
-          <!--</li>-->
-        <!--<%# end %>-->
-      <!--</ul>-->
-    <!--<%# end %>-->
-  <%# elsif menu_branch.url.include? '/contact' %>
-    <!--<h2><%#= link_to(menu_branch.title, '#contact', class: 'contact_btn') -%></h2>-->
-  <%# else %>
+  <% if menu_branch.title.downcase.include? 'contact' %>
+    <%= link_to(menu_branch.title, '#contact_area', :class => 'contact_link') -%>
+  <% else %>
     <%= link_to(menu_branch.title, refinery.url_for(menu_branch.url)) -%>
-  <%# end %>
+  <% end %>
 
   <% if ( (children = menu_branch.children unless hide_children).present? &&
           (!local_assigns[:menu_levels] || menu_branch.ancestors.length < local_assigns[:menu_levels]) ) -%>
