--- a/app/views/refinery/blog/shared/_post.html.erb
+++ b/app/views/refinery/blog/shared/_post.html.erb
@@ -2,17 +2,11 @@
   <article class="blog_post" id="<%= dom_id(post) %>">
   <div class="col-xs-12 col-sm-6 col-md-4">
     <div class="blog_post_pod">
-
-      <%= link_to(image_fu(post.image, "490x380#c", :alt => post.image.alt_tag, :class=>"img-responsive"), refinery.blog_post_path(post)) %>
-      <div class="banner-arrow"><img class="img-responsive" src="/assets/arrow.png"></div>
-      <div class="content cf">
-        <h2><%= link_to post.title, refinery.blog_post_path(post) %></h2>
-        <div class="date"><%= post.published_at.strftime("%d %B %Y") %></div>
-        <% if blog_post_teaser_enabled? %>
-          <%= blog_post_teaser(post) %>
-        <% else %>
-          <%= post.body.html_safe %>
-        <% end %>
+      <%= link_to(image_fu(post.image, '360x272#c', :class=>"img-responsive"), refinery.blog_post_path(post)) %>
+      <div class="caption cf">
+        <div class="title"><%= link_to post.title, refinery.blog_post_path(post) %></div>
+        <div class="date"><%= post.published_at.strftime('%B %e, %Y') %></div>
+        <div class="comment"><a><i class="fa fa-comment-o"></i><%= post.comments.count %></a></div>
       </div>
 
     </div>
@@ -20,6 +14,3 @@
 
   </article>
 <% end %>
-
-
-
