--- a/app/assets/stylesheets/jquery.bxslider.css
+++ b/app/assets/stylesheets/jquery.bxslider.css
@@ -105,20 +105,22 @@
 
 .bx-wrapper .bx-prev {
 	left: 10px;
-	background: url(/assets/controls.png) no-repeat 0 -32px;
+	background: url(/assets/controls.png) no-repeat 19px 0;
+    left: -50px;
 }
 
 .bx-wrapper .bx-next {
 	right: 10px;
-	background: url(/assets/controls.png) no-repeat -43px -32px;
+	background: url(/assets/controls.png) no-repeat -13px 0px;
+    right: -50px;
 }
 
 .bx-wrapper .bx-prev:hover {
-	background-position: 0 0;
+	background-position: 19px 0;
 }
 
 .bx-wrapper .bx-next:hover {
-	background-position: -43px 0;
+	background-position: -13px 0;
 }
 
 .bx-wrapper .bx-controls-direction a {
