--- a/app/views/layouts/accommodations.html.erb
+++ b/app/views/layouts/accommodations.html.erb
@@ -25,7 +25,6 @@
         <% if @accommodation.present? %>
           <div class="master-slider ms-skin-default" id="masterslider2">
             <% @accommodation.gallery.items.reorder('position ASC').each do |banner| %>
-              <a href="#banner-overlay" class="lodge_btn"><div class="banner-overlay" id="banner-overlay"><img class="img-responsive" src="/assets/banner-overlay-scroll.png"></div></a>
               <div class="ms-slide slide-1" data-delay="2">
                 <h1 class="accommodation-name"><%= raw @accommodation.name %></h1>
                 <div class="overlay"></div>
@@ -148,9 +147,9 @@
                                       <div class="col-xs-12 col-sm-6">
                                         <%= f.input :message, :wrapper => :bootstrap_12,:input_html  => {:rows=>6, :class => 'form-control' } %>
                                       </div>
-                                      <div class="col-xs-12 col-sm-6">
-                                        <img src="/assets/captcha.png" class="img-responsive captcha">
-                                      </div>
+                            <div class="col-xs-12 col-sm-6">
+                              <div class="captcha"></div>
+                            </div>
                                       <div class="col-xs-12 col-sm-6">
                                         <%= f.input :captcha, :wrapper => :bootstrap_12, :input_html => { :class => 'form-control' } %>
                                       </div>
