--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
       </div>
     </div>
 
-  <div id="countries">
+<!--   <div id="countries">
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
@@ -51,10 +51,12 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
     <%= render '/refinery/footer' -%>
 
     <%= render '/refinery/javascripts' %>
+
+
   </body>
 </html>
