--- a/app/views/layouts/blogs.html.erb
+++ b/app/views/layouts/blogs.html.erb
@@ -49,7 +49,7 @@
     </div> 
   <% end %>
 
-  <div id="countries">
+<!--   <div id="countries">
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
@@ -77,7 +77,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
    
     <%= render '/refinery/footer' -%>
 
