--- a/app/views/refinery/blog/posts/_post.html.erb
+++ b/app/views/refinery/blog/posts/_post.html.erb
@@ -21,19 +21,31 @@
 
 <% content_for :right do %>
   <% if @post.locations.present? %>
-<div class="blog_rhs">
-      <h2>Location</h2>
-      <ul>
-        <% @post.locations.each do |location| %>
-          <li class='clearfix'>     
-          <%= link_to(image_fu(location.cover_image, "105x80#c", :alt => location.cover_image.alt_tag, :class=>"hidden-sm") + location.name, location_link(location)) if location.cover_image.present? %>
-          <div class="description"><%=raw truncate(location.description, :length => 70) %></div>
-          </li>
-        <% end %>
-      </ul>
-    </div>
+  <div class="blog_rhs">
+        <h2>Location</h2>
+        <ul class=" list-inline list-unstyled">
+          <% @post.locations.each do |location| %>
+            <li class="search-item">     
+            <%= link_to(image_fu(location.cover_image, "105x80#c", :alt => location.cover_image.alt_tag),refinery.locations_location_path(location)) if location.cover_image.present? %>
+            <div class="search-item-body">
+              <h3><%= link_to strip_tags(location.name), refinery.locations_location_path(location) %></h3>
+              <div class="description"><%=raw truncate(location.description, :length => 120) %></div>
+            </div>
+            </li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
   <% end %>
-<% end %>
+
+
+
+
+
+
+
+
+
 
 
 <%= render :partial => '/refinery/draft_page_message' unless @post.nil? or @post.live? -%>
