--- a/app/views/layouts/accommodations.html.erb
+++ b/app/views/layouts/accommodations.html.erb
@@ -152,7 +152,7 @@
                                         <img src="/assets/captcha.png" class="img-responsive captcha">
                                       </div>
                                       <div class="col-xs-12 col-sm-6">
-                                        <%= f.input :captcha, :wrapper => :bootstrap_12, :input_html => { :class => 'form-control' } %>
+                                        <%= f.input :captcha, :wrapper => :bootstrap_12, :input_html => { :class => 'form-control', :required => true, :pattern => "Y4X3B" } %>
                                       </div>
                                       <div class="col-xs-12">
                                         <%= f.submit 'Submit', :class=>"btn btn-default btn-custom", :data => {:disable_with => "Saving..."} %>
