--- a/app/views/layouts/locations.html.erb
+++ b/app/views/layouts/locations.html.erb
@@ -120,7 +120,7 @@
                                 <div class="captcha"></div>
                               </div>
                               <div class="col-xs-12 col-sm-6">
-                                <%= f.input :captcha, :wrapper => :bootstrap_12, :input_html => { :class => 'form-control' } %>
+                                <%= f.input :captcha, :wrapper => :bootstrap_12, :input_html => { :class => 'form-control', :required => true, :pattern => "Y4X3B" } %>
                               </div>
                               <div class="col-xs-12">
                                 <%= f.submit 'Submit', :class=>"btn btn-default btn-custom", :data => {:disable_with => "Saving..."} %>
@@ -246,7 +246,7 @@
                               <img src="/assets/captcha.png" class="img-responsive captcha">
                             </div>
                             <div class="col-xs-12 col-sm-6">
-                              <%= f.input :captcha, :wrapper => :bootstrap_12, :input_html => { :class => 'form-control' } %>
+                              <%= f.input :captcha, :wrapper => :bootstrap_12, :input_html => { :class => 'form-control', :required => true, :pattern => "Y4X3B" } %>
                             </div>
                             <div class="col-xs-12">
                               <%= f.submit 'Submit', :class=>"btn btn-default btn-custom", :data => {:disable_with => "Saving..."} %>
