--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -153,11 +153,12 @@ strong {font-weight:500;}
     .bx-wrapper {margin:0!important;}
     .bx-viewport {background:#f4f4f4; box-shadow:none; border:0; height:330px!important;
       .safari-type-item,.experience-item {margin:0 0 20px; position: relative;
-        a {display:block; width:100%; height:100%;
-          .caption {width:100px; position: absolute; top: 100px; left:0; right:0; margin:0 auto; text-align:center;
-            h3 {color:#ffffff; background:url(/assets/bg-h3.gif) bottom center no-repeat; padding-bottom:15px; margin:0;}
+        a {display:block; width:100%; height:100%; position:relative;
+          .caption {width:100px; position: absolute; top: 100px; left:0; right:0; margin:0 auto; text-align:center; z-index:300;
+            h3 {color:#ffffff; background:url(/assets/bg-h3.gif) bottom center no-repeat; padding-bottom:15px; margin:0; height:67px;}
             .btn-custom,.btn-custom:hover {@include button (25px,25px,#ffffff,1px solid #ffffff,transparent,20px,12px,0 10px);}
           }
+          .slider-overlay {background: rgba(0,0,0,0.2); height: 100%; position: absolute; z-index: 100; width: 100%;}
         }
       }
     }
