--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -86,6 +86,7 @@ strong {font-weight:500;}
     img {margin-right:20px;}
   }
   li.close-image {text-align:center; margin:50px -20px 0 0;}
+  li.close-image:hover {cursor:pointer;}
 }
 
 .overlay.open {
@@ -114,7 +115,7 @@ strong {font-weight:500;}
 }
 
 .master-slider {text-align:center;
-  .overlay {position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 5; background: url(../assets/overlay.png) repeat;}
+  .overlay {position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 5; background: url(../assets/overlay.png) repeat; opacity:1; visibility:initial;}
   .search {background:rgba(0,0,0,0.6); padding:20px 0; position:absolute; width:100%; bottom:0; z-index:2000; text-align:left; color:#ffffff;
     h2 {margin:0; color:#ffffff; line-height:18px;}
     .form-control {width:100%; border: 0; border-radius: 0; height: 42px;}
