--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -76,11 +76,11 @@ strong {font-weight:500;}
   ul {padding:15px 0;}
 }
 
-.overlay {position: fixed; background: rgba(34,34,34,0.85); top: 0; left: 0; width: 100%; height: 100%; opacity: 0; visibility: hidden; transition: opacity .35s, visibility .35s, height .35s; overflow: hidden; z-index:3000;}
-.overlay.open {opacity: 1; visibility: visible; height: 100%; }
-.overlay .nav-title {color: #fff; position: absolute; left: 50%; transform: translate(-50%); top: 8%;}
-.overlay nav {position: relative; height: 50%; top: 43%; transform: translateY(-50%); text-align: center;}
-.overlay ul {list-style: none; padding: 0; margin: 0; display: inline-block; height: 215px;
+.overlay-hover {position: fixed; background: rgba(34,34,34,0.85); top: 0; left: 0; width: 100%; height: 100%; opacity: 0; visibility: hidden; transition: opacity .35s, visibility .35s, height .35s; overflow: hidden; z-index:3000;}
+.overlay-hover.open {opacity: 1; visibility: visible; height: 100%; }
+.overlay-hover .nav-title {color: #fff; position: absolute; left: 50%; transform: translate(-50%); top: 8%;}
+.overlay-hover nav {position: relative; height: 50%; top: 43%; transform: translateY(-50%); text-align: center;}
+.overlay-hover ul {list-style: none; padding: 0; margin: 0; display: inline-block; height: 215px;
   li {position: relative; opacity: 0; margin-bottom: 10px;
     a,a:hover {color: #FFF;}
     img {margin-right:20px;}
@@ -89,7 +89,7 @@ strong {font-weight:500;}
   li.close-image:hover {cursor:pointer;}
 }
 
-.overlay.open {
+.overlay-hover.open {
   li {animation: fadeInRight .5s ease forwards; animation-delay: 0s;}
   li:nth-of-type(2) {animation-delay: .4s;}
   li:nth-of-type(3) {animation-delay: .45s;}
@@ -115,7 +115,7 @@ strong {font-weight:500;}
 }
 
 .master-slider {text-align:center;
-  .overlay {position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 5; background: url(../assets/overlay.png) repeat; opacity:1; visibility:initial;}
+  .overlay {position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 5; background: url(../assets/overlay.png) repeat;}
   .search {background:rgba(0,0,0,0.6); padding:20px 0; position:absolute; width:100%; bottom:0; z-index:2000; text-align:left; color:#ffffff;
     h2 {margin:0; color:#ffffff; line-height:18px;}
     .form-control {width:100%; border: 0; border-radius: 0; height: 42px;}
