--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -46,6 +46,7 @@
             <div class="controls">
               <span class="safari-slider-next"></span>
             </div>
+            <section class="shell">
             <ul class="bxsliderSafari">
               <% safaris.each do |item| %>
                 <li>
@@ -62,6 +63,7 @@
                 </li>
               <% end %>
             </ul>
+            </section>
           </div>
         </div>
       </div>
