--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -52,7 +52,7 @@
                   <div class="safari-type-item">
                     <%= link_to refinery.activities_activity_path(item) do %>
                       <div class="caption">
-                        <h3><%= item.name %></h3>
+                        <h3><%= raw item.name %></h3>
                         <div class="btn btn-custom">Read More</div>
                       </div>
                       <div class="slider-overlay"></div>
@@ -100,7 +100,7 @@
                       <div class="experience-item">
                         <%= link_to refinery.activities_activity_path(item) do %>
                           <div class="caption">
-                            <h3><%= item.name %></h3>
+                            <h3><%= raw item.name %></h3>
                           </div>
                           <div class="slider-overlay"></div>
                           <%= image_fu item.image, '217x162#c' %>
