--- a/app/views/layouts/locations.html.erb
+++ b/app/views/layouts/locations.html.erb
@@ -166,7 +166,7 @@
                           <%= link_to refinery.activities_activity_path(item) do %>
                             <%= image_fu item.image, "218x330#c" %>
                             <div class="caption">
-                              <h3><%= item.name %></h3>
+                              <h3><%= raw item.name %></h3>
                               <div class="btn btn-custom">Read More</div>
                             </div>
                           <% end %>
@@ -200,7 +200,7 @@
                               <%= link_to refinery.activities_activity_path(item) do %>
                                 <%= image_fu item.image, '440x330#c' %>
                                 <div class="caption">
-                                  <h3><%= item.name %></h3>
+                                  <h3><%= raw item.name %></h3>
                                 </div>
                               <% end %>
                             </div>
@@ -209,7 +209,7 @@
                               <%= link_to refinery.activities_activity_path(item) do %>
                                 <%= image_fu item.image, '217x162#c' %>
                                 <div class="caption">
-                                  <h3><%= item.name %></h3>
+                                  <h3><%= raw item.name %></h3>
                                 </div>
                               <% end %>
                             </div>
@@ -373,7 +373,7 @@
                             <%= link_to refinery.activities_activity_path(item) do %>
                               <%= image_fu item.image, "218x330#c" %>
                               <div class="caption">
-                                <h3><%= item.name %></h3>
+                                <h3><%= raw item.name %></h3>
                                 <div class="btn btn-custom">Read More</div>
                               </div>
                             <% end %>
@@ -410,7 +410,7 @@
                                 <%= link_to refinery.activities_activity_path(item) do %>
                                   <%= image_fu item.image, '440x330#c' %>
                                   <div class="caption">
-                                    <h3><%= item.name %></h3>
+                                    <h3><%= raw item.name %></h3>
                                   </div>
                                 <% end %>
                               </div>
@@ -419,7 +419,7 @@
                                 <%= link_to refinery.activities_activity_path(item) do %>
                                   <%= image_fu item.image, '217x162#c' %>
                                   <div class="caption">
-                                    <h3><%= item.name %></h3>
+                                    <h3><%= raw item.name %></h3>
                                   </div>
                                 <% end %>
                               </div>
