--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -150,7 +150,8 @@
           <div class="overlay"></div>
           <%= image_fu(banner.image, "1920x935#c", :alt => banner.image.alt_tag) %>
             <% if home_page? %>
-              <img src="/assets/blank.gif" data-src="/assets/logo.png" class="ms-layer logo" data-type="image" data-delay="750" data-duration="2000" data-ease="easeOutExpo" data-resize="false">
+              <img src="/assets/blank.gif" data-src="/assets/logo.png" class="ms-layer logo hidden-xs" data-type="image" data-delay="750" data-duration="2000" data-ease="easeOutExpo" data-resize="false">
+              <img src="/assets/blank.gif" data-src="/assets/logo-mobile.png" class="ms-layer logo visible-xs" data-type="image" data-delay="750" data-duration="2000" data-ease="easeOutExpo" data-resize="false">
             <% elsif banner.description.present? %>
               <div class="ms-layer banner-text" data-type="text" data-delay="750" data-duration="2000" data-ease="easeOutExpo" data-resize="false">
                 <%= raw banner.description %>
