--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -450,6 +450,9 @@ strong {font-weight:500;}
     }
     .social-media li {display:inline-block; padding:0 5px 0 0;}
   }
+  .navbar ul li {text-align:center;}
+  .navbar ul li a {margin:0;}
+  .navbar ul.social-media {margin:0;}
   .master-slider {
     .logo {margin-left:auto; width:50%;}
     .banner-text h2 {font-size:17px!important; letter-spacing:3px!important;}
